# playAgent

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  setup-models.sh  setup.sh  start_ollama.bash
backend/: .dockerignore  .env  .gitignore  Dockerfile  langgraph.json  langgraph.multi.json  pyproject.toml
backend/src/: frontend_friends.py  load_friends.py  query_friends.py
backend/src/agent/: app.py  graph.py  judge_evaluator  judge_evaluator.py  prompts.py  state.py  tools_and_schemas.py
backend/src/agent-multi/: graph.py  state.py  tools_and_schemas.py
backend/src/agent/tools/: __init__.py  add_symptom.py  add_task.py  check_current_time.py  get_diagnosis.py  get_list_of_symptoms.py  get_list_of_tasks.py  get_social_data.py  get_treatment.py  retrieve_long_term_memory.py  save_long_term_memory.py  save_short_term_memory.py
backend/src/agent_multi/: app.py  graph.py  prompts.py  state.py  tools_and_schemas.py
backend/src/api/: map.py  transcription.py
backend/src/config/: __init__.py  settings.py
backend/src/data/friends/: extra_friends.json  friends_map_folium.html  friends_map_leaflet.html
backend/src/helpers/: __init__.py  helper_ollama.py
backend/src/logs/: __init__.py  log_utils.py
backend/src/long-term-memory/: sql_store.py  vector_store.py
backend/src/long_term_memory/: __init__.py  load_vector_memory.py  structured_store.py  vector_store.py
backend/src/services/memory/: __init__.py  chromadb_store.py  faiss_store.py  load_vector_memory.py  sqlite3_store.py
backend/src/services/neo4j/: __init__.py  animate_friends.py  load_extra_friends.py  load_friends.py  neo4j_service.py  prompts.py  query_friends.py
backend/src/services/stt/: __init__.py  stt.py
backend/src/utils/: __init__.py  logger.py
frontend/: .dockerignore  .env  .gitignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/public/: friends_map_leaflet.html  leaflet_map_template.html
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/[..._path]/: route.ts
frontend/src/components/: theme-toggle.tsx
frontend/src/components/thread/: index.tsx  markdown-text.tsx  thinking-display.tsx
frontend/src/components/thread/messages/: ai.tsx  human.tsx  tool-calls.tsx  wta-interrupt.tsx
frontend/src/components/ui/: audio-recorder.tsx  button.tsx  map-panel.tsx  right-panel.tsx  wta-alternatives-grid.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/lib/: ensure-tool-responses.ts
frontend/src/providers/: Stream.tsx  Thread.tsx  theme-provider.tsx
media/: Agent Memory.pptx
ollama-custom/: Dockerfile
stt/: Dockerfile  main.py  requirements.txt
